<resources>
    <string name="app_name">Thousand Counter</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="toast_text">Type a value!</string>
    <string name="player_1">Player 1</string>
    <string name="zero">0</string>
    <string name="player_2">Player 2</string>
    <string name="player_3">Player 3</string>
    <string name="player_4">Player 4</string>
</resources>
