<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="justynachrustna.thousandcounter.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="Enter your names"
        android:textSize="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="30dp"
        />

    <EditText
        style="@style/edit_players_style"
        android:hint="@string/player_1"

        android:id="@+id/player1_et" />

    <EditText

        android:hint="@string/player_2"
        style="@style/edit_players_style"
        android:id="@+id/player2_et"/>
    <EditText
        style="@style/edit_players_style"
        android:hint="@string/player_3"
        android:id="@+id/player3_et"
        />
    <EditText
        style="@style/edit_players_style"
        android:hint="@string/player_4"
        android:id="@+id/player4_et"
        />
    <Button
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="start game"
        android:textAllCaps="true"
        android:layout_gravity="center"/>


</LinearLayout>
