<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_counter"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkGreen"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="justynachrustna.thousandcounter.Counter">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout style="@style/player_linear_layout_style">

            <TextView
                android:id="@+id/name_player_1"
                style="@style/player_field_style"
                android:text="@string/player_1" />

            <TextView
                android:id="@+id/total_score_1"
                style="@style/score_style"
                android:text="@string/zero" />

            <LinearLayout style="@style/points_linear_layout_style">

                <Button
                    android:id="@+id/minus_button_1"
                    style="@style/button_style"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/score_et_1"
                    style="@style/edit_text_points_style" />

                <Button
                    android:id="@+id/plus_button_1"
                    style="@style/button_style"
                    android:text="@string/plus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"></LinearLayout>

        <LinearLayout style="@style/player_linear_layout_style">

            <TextView
                android:id="@+id/name_player_2"
                style="@style/player_field_style"
                android:text="@string/player_2" />

            <TextView
                android:id="@+id/total_score_2"
                style="@style/score_style"
                android:text="@string/zero" />

            <LinearLayout style="@style/points_linear_layout_style">

                <Button
                    android:id="@+id/minus_button_2"
                    style="@style/button_style"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/score_et_2"
                    style="@style/edit_text_points_style" />

                <Button
                    android:id="@+id/plus_button_2"
                    style="@style/button_style"
                    android:text="@string/plus" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary"></LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout style="@style/player_linear_layout_style">

            <TextView
                android:id="@+id/name_player_3"
                style="@style/player_field_style"
                android:text="@string/player_3" />

            <TextView
                android:id="@+id/total_score_3"
                style="@style/score_style"
                android:text="@string/zero" />

            <LinearLayout style="@style/points_linear_layout_style">

                <Button
                    android:id="@+id/minus_button_3"
                    style="@style/button_style"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/score_et_3"
                    style="@style/edit_text_points_style" />

                <Button
                    android:id="@+id/plus_button_3"
                    style="@style/button_style"
                    android:text="@string/plus" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"></LinearLayout>

        <LinearLayout style="@style/player_linear_layout_style">

            <TextView
                android:id="@+id/name_player_4"
                style="@style/player_field_style"
                android:text="@string/player_4" />

            <TextView
                android:id="@+id/total_score_4"
                style="@style/score_style"
                android:text="@string/zero" />

            <LinearLayout style="@style/points_linear_layout_style">

                <Button
                    android:id="@+id/minus_button_4"
                    style="@style/button_style"
                    android:text="@string/minus" />

                <EditText
                    android:id="@+id/score_et_4"
                    style="@style/edit_text_points_style" />

                <Button
                    android:id="@+id/plus_button_4"
                    style="@style/button_style"
                    android:text="@string/plus" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
